[project]
name = "climate-sage"
version = "0.1.0"
description = ""
authors = [
    {name = "Beau Severson",email = "beau.m.severson@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "google-genai (>=1.41.0,<2.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "django (>=5.2.7,<6.0.0)",
    "graphene-django (>=3.2.3,<4.0.0)"
]

[tool.poetry]
package-mode = false


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
